@@ -1,6 +1,14 @@
 # Sudoku
 A Sudoku game in Java Code
 
+To compile:
+javac -g --module-path [path-to-javafx/lib] --add-modules javafx.controls
+
+To run:
+java --module-path [path-to-javafx/lib] --add-modules javafx.controls
+
+These are specified on my machine in the included makefile, you can edit this path to run on your local machine.
+
 What I've learned from this project: 
 The power of modulus!
 Use an ArrayList!
